# oclaw

./: .gitignore  ARCHITECTURE.md  Agent.ml  CLAUDE.md  Effects.ml  Oclaw_server.ml  README.md  acp_client.ml  acp_server.ml  acp_transport.ml  agent_engine.ml  agent_engine.mli  api.ml  assistant_runtime.ml  assistant_runtime.mli  config.ml  config_json.ml  db.ml  db.mli  dune  dune-project  graph_engine.ml  graph_engine.mli  http_client.ml  http_client.mli  http_server.ml  knowledge.ml  knowledge.mli  llm_provider.ml  llm_provider.mli  llm_types.ml  llm_types.mli  log_color.ml  log_color.mli  memory.ml  memory.mli  memory_test.json  nanobot.ml  oclaw.ml  oclaw.opam  (+52 more)
.agents/workflows/: skills.md
.github/workflows/: ci.yml
lib/: dune-project  dune-workspace
lib/acp/: acp.ml  acp.mli  dune  oclaw_acp.ml  oclaw_acp.mli
lib/af_agent/: af_agent.ml  af_agent.mli  dune
lib/agent_core/: agent_engine.ml  assistant_runtime.ml  assistant_runtime.mli  config.ml  dune  memory.mli  project_paths.ml  runtime.ml  runtime.mli  transcript.ml  transcript.mli  tree.ml  tree.mli
lib/agent_core/transcript_css/: transcript.css
lib/agent_runtime/: agent_engine.ml  agent_engine.mli  app.ml  app.mli  assistant.ml  assistant.mli  config.ml  dune  export.ml  export.mli  project_paths.ml  runtime.ml  runtime.mli  session.ml  session.mli  tools.ml  tools.mli  transcript.ml  transcript.mli  tree.ml
lib/agent_skills/: dune  skills.ml  skills.mli
lib/agent_tools/: dune  tools.ml  tools.mli
lib/agent_tui/: dune  plain_repl.ml  plain_repl.mli  prompt_header.ml  prompt_header.mli  tui.ml  tui.mli
lib/httpkit/: client.ml  client.mli  dune  http_client.ml  http_client.mli
lib/llm_provider/: dune  llm_provider.ml  llm_provider.mli  retry.ml  retry.mli  token_estimator.ml  token_estimator.mli
lib/llm_types/: dune  llm_types.ml  llm_types.mli
lib/tiktoken/: bpe.ml  bpe.mli  dune  encoding.ml  encoding.mli  tiktoken.ml  tiktoken.mli  vocab.ml  vocab.mli
skills/git-expert/: SKILL.md
skills/ocaml-pro/: SKILL.md
skills/python-cli/: SKILL.md
skills/scheduler/: SKILL.md
skills/skill-ops/: SKILL.md
skills/web-research/: SKILL.md
test/: dune  test_acp.ml  test_af_agent.ml  test_assistant_runtime.ml  test_config.ml  test_http_client.ml  test_llm_provider.ml  test_llm_types.ml  test_plain_repl.ml  test_retry.ml  test_skill_support.ml  test_tiktoken.ml  test_token_estimation.ml  test_token_estimator.ml  test_tool_errors.ml  test_tools_registry.ml
workspace/: AGENTS.md  IDENTITY.md  SOUL.md  USER.md
workspace/state/: tasks.db
