(library
 (name log_color)
 (modules log_color)
 (libraries fmt.tty logs logs.fmt unix)
 (flags :standard -w -A))

(library
 (name http_client)
 (modules http_client)
 (libraries curl iomux yojson logs)
 (preprocess (pps ppx_deriving.show))
 (flags :standard -w -A))

(library
 (name llm_provider)
 (modules llm_provider)
 (libraries http_client curl iomux yojson logs)
 (preprocess (pps ppx_deriving.show))
 (flags :standard -w -A))

(library
 (name oclaw_config)
 (modules config)
 (libraries ppx_protocol_conv_yaml yaml llm_provider)
 (preprocess (pps ppx_protocol_conv))
 (flags :standard -w -A))

(library
 (name tools)
 (modules tools)
 (libraries yojson unix)
 (preprocess (pps ppx_deriving.show))
 (flags :standard -w -A))

(library
 (name assistant_runtime)
 (modules assistant_runtime)
 (libraries llm_provider tools logs unix yojson)
 (preprocess (pps ppx_deriving.show))
 (flags :standard -w -A))

(executable
 (name oclaw)
 (modules oclaw)
 (libraries
  assistant_runtime
  llm_provider
  log_color
  logs
  logs.fmt
  oclaw_config
  tools
  unix)
 (preprocess (pps ppx_deriving.show))
 (flags :standard -w -A))

(executable
 (name test_tools_registry)
 (modules test_tools_registry)
 (libraries tools yojson unix)
 (preprocess (pps ppx_deriving.show))
 (flags :standard -w -A))

(executable
 (name test_assistant_runtime)
 (modules test_assistant_runtime)
 (libraries assistant_runtime llm_provider tools unix yojson)
 (preprocess (pps ppx_deriving.show))
 (flags :standard -w -A))

(executable
 (name test_config)
 (modules test_config)
 (libraries oclaw_config llm_provider)
 (preprocess (pps ppx_deriving.show))
 (flags :standard -w -A))
