(library
 (name llm_types)
 (modules llm_types)
 (libraries yojson)
 (flags :standard -w -A))

(library
 (name log_color)
 (modules log_color)
 (libraries fmt.tty logs logs.fmt unix)
 (flags :standard -w -A))

(library
 (name http_client)
 (modules http_client)
 (libraries curl iomux yojson logs)
 (preprocess (pps ppx_deriving.show))
 (flags :standard -w -A))

(library
 (name llm_provider)
 (modules llm_provider)
 (libraries http_client curl iomux llm_types yojson logs)
 (preprocess (pps ppx_deriving.show))
 (flags :standard -w -A))

(library
 (name db)
 (modules db)
 (libraries sqlite3 unix)
 (flags :standard -w -A))

(library
 (name memory)
 (modules memory)
 (libraries unix)
 (flags :standard -w -A))

(library
 (name skills)
 (modules skills)
 (libraries http_client unix)
 (flags :standard -w -A))

(library
 (name oclaw_config)
 (modules config)
 (libraries ppx_protocol_conv_yaml yaml llm_provider)
 (preprocess (pps ppx_protocol_conv))
 (flags :standard -w -A))

(library
 (name tools)
 (modules tools)
 (libraries db http_client llm_types memory skills str unix yojson)
 (preprocess (pps ppx_deriving.show))
 (flags :standard -w -A))

(library
 (name runtime)
 (modules runtime)
 (libraries db llm_provider memory oclaw_config skills tools unix)
 (flags :standard -w -A))

(library
 (name graph_engine)
 (modules graph_engine)
 (libraries db domainslib llm_types memory tools unix yojson logs)
 (flags :standard -w -A))

(library
 (name agent_engine)
 (modules agent_engine)
 (libraries db domainslib llm_types memory oclaw_config runtime tools unix yojson logs)
 (flags :standard -w -A))

(library
 (name assistant_runtime)
 (modules assistant_runtime)
 (libraries agent_engine db llm_provider llm_types oclaw_config runtime yojson)
 (preprocess (pps ppx_deriving.show))
 (flags :standard -w -A))

(executable
 (name oclaw)
 (modules oclaw)
 (libraries
  agent_engine
  llm_provider
  log_color
  logs
  logs.fmt
  oclaw_config
  runtime
  tools
  unix)
 (preprocess (pps ppx_deriving.show))
 (flags :standard -w -A))

(executable
 (name test_tools_registry)
 (modules test_tools_registry)
 (libraries db tools yojson unix)
 (preprocess (pps ppx_deriving.show))
 (flags :standard -w -A))

(executable
 (name test_assistant_runtime)
 (modules test_assistant_runtime)
 (libraries agent_engine db llm_provider llm_types memory oclaw_config runtime skills tools unix yojson)
 (preprocess (pps ppx_deriving.show))
 (flags :standard -w -A))

(executable
 (name test_llm_provider)
 (modules test_llm_provider)
 (libraries llm_provider llm_types yojson)
 (preprocess (pps ppx_deriving.show))
 (flags :standard -w -A))

(executable
 (name test_config)
 (modules test_config)
 (libraries oclaw_config llm_provider)
 (preprocess (pps ppx_deriving.show))
 (flags :standard -w -A))
