(test
 (name test_config)
 (libraries agent_core llm_provider))

(test
 (name test_http_client)
 (libraries httpkit yojson))

(test
 (name test_tools_registry)
 (libraries agent_core agent_tools yojson unix))

(test
 (name test_assistant_runtime)
 (libraries agent_core agent_tools llm_provider yojson unix))

(test
 (name test_llm_provider)
 (libraries llm_types llm_provider yojson))

(test
 (name test_retry)
 (libraries agent_core llm_provider))
