(test
 (name test_config)
 (libraries agent_runtime llm_provider))

(test
 (name test_http_client)
 (libraries h1 httpkit yojson))

(test
 (name test_acp)
 (libraries acp yojson))

(test
 (name test_tools_registry)
 (libraries agent_runtime yojson unix))

(test
 (name test_assistant_runtime)
 (libraries agent_runtime llm_provider acp yojson unix))

(test
 (name test_llm_provider)
 (libraries llm_types llm_provider yojson))

(test
 (name test_llm_types)
 (libraries llm_types yojson))

(test
 (name test_retry)
 (libraries llm_provider))

(test
 (name test_tool_errors)
 (libraries agent_runtime))

(test
 (name test_skill_support)
 (libraries agent_runtime agent_skills unix))

(test
 (name test_plain_repl)
 (libraries agent_tui acp llm_types unix))

(rule
 (copy ../lib/tiktoken/vocab_cl100k.txt vocab_cl100k.txt))
(rule
 (copy ../lib/tiktoken/vocab_o200k.txt vocab_o200k.txt))

(test
 (name test_tiktoken)
 (libraries tiktoken unix)
 (deps vocab_cl100k.txt vocab_o200k.txt))

(test
 (name test_token_estimator)
 (libraries llm_provider tiktoken unix)
 (deps vocab_cl100k.txt vocab_o200k.txt))
