(library
 (name agent_core)
 (modules config transcript tree memory db runtime agent_engine assistant_runtime)
 (libraries
  llm_types
  llm_provider
  httpkit
  agent_skills
  agent_tools
  sqlite3
  unix
  logs
  yojson
  tyxml
  ppx_protocol_conv_json
  ppx_protocol_conv_yaml
  yaml
  domainslib)
 (preprocess (pps ppx_protocol_conv)))
