(rule
 (targets transcript_css.ml)
 (deps (source_tree transcript_css))
 (action (run ocaml-crunch -m plain -o %{targets} transcript_css)))

(library
 (name agent_core)
 (modules config project_paths transcript tree runtime agent_engine assistant_runtime transcript_css)
 (libraries
  llm_types
  llm_provider
  httpkit
  agent_skills
  agent_tools
  sqlite3
  unix
  logs
  yojson
  tyxml
  ppx_protocol_conv_json
  ppx_protocol_conv_yaml
  yaml
  domainslib)
 (preprocess (pps ppx_protocol_conv)))
