(rule
 (targets transcript_css.ml)
 (deps (source_tree transcript_css))
 (action (run ocaml-crunch -m plain -o %{targets} transcript_css)))

(library
 (name agent_runtime)
 (modules config app session export assistant runtime agent_engine project_paths transcript tree transcript_css tools)
 (private_modules runtime agent_engine project_paths transcript tree transcript_css)
 (libraries
  agent_skills
  httpkit
  sqlite3
  unix
  logs
  yojson
  tyxml
  ppx_protocol_conv_json
 ppx_protocol_conv_yaml
  yaml
  domainslib
  llm_types
  llm_provider)
 (preprocess (pps ppx_protocol_conv)))
