;; Embed vocabulary files using crunch
(rule
 (targets vocab_cl100k_data.ml)
 (deps (source_tree vocab_cl100k))
 (action (run ocaml-crunch -m plain -o %{targets} vocab_cl100k)))

(rule
 (targets vocab_o200k_data.ml)
 (deps (source_tree vocab_o200k))
 (action (run ocaml-crunch -m plain -o %{targets} vocab_o200k)))

(library
 (name tiktoken)
 (modules tiktoken vocab bpe encoding vocab_cl100k_data vocab_o200k_data)
 (libraries re uutf unix)
 (preprocess (pps ppx_deriving_yojson)))
